# rusty_nbody

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
analysis/: plot.py
src/: kernels.rs  macros.rs  main.rs  test.rs  util.rs  vec3.rs  viewer.rs
src/kernels/: three_body.rs
src/kernels/three_body/: rk4.rs  symplectic_euler.rs  vel_verlet.rs  yoshida4.rs
src/three_body/: mod.rs  rk4.rs  vel_verlet.rs  vel_verlet_avx2.rs  yoshida4.rs
