[package]
name = "rusty_nbody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
kiss3d = "0.35.0"
palette = "0.7.6"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
